<resources>
    <string name="app_name">Sortify Android App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="logo">logo</string>
    <string name="welcome_to_app_for_garbage_sorting">WELCOME TO APP FOR GARBAGE SORTING</string>
    <string name="enter_your_data">ENTER YOUR DATA HERE:</string>
    <string name="if_you_dont_have_an_account_click_on_register_button_bellow">If you dont have an account click on register button bellow</string>
    <string name="signup">signup</string>
    <string name="repeat_password">Repeat password</string>
    <string name="full_name">Full name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="backbtn">backBtn</string>
    <string name="go_back">RETURN</string>
    <string name="statistics">STATISTICS</string>
    <string name="sort_your_trash">Sort your trash</string>
    <string name="explore_products">EXPLORE PRODUCTS</string>
    <string name="recycle_here">Recycle here</string>
    <string name="scan_product">Scan product</string>
    <string name="my_account">My account</string>
    <string name="contact_support">Contact support</string>
    <string name="show_container_locations">SHOW CONTAINER LOCATIONS</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="requests">Requests</string>
    <string name="users">Users</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clik_on_field_to_change_data_than_click_save_or_to_abort_just_go_back_to_main_user_panel">Clik on field to change data, than click save, or to abort just go back to main user panel.</string>
    <string name="my_profile_data">My profile data</string>
    <string name="change_passwords">Change Passwords</string>
    <string name="save_changes">Save changes</string>
    <string name="change_passwords_and_repeat_to_confirm">Change passwords and repeat to confirm</string>
    <string name="profilepicture">profilePicture</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="welcome">Welcome</string>
    <string name="learn_how_to_recycle">Learn how to recycle</string>
    <string name="users_and_requests">users and requests</string>
    <string name="add_containers">add containers</string>
    <string name="all_users_and_their_stats">All users and their stats</string>
    <string name="product_types">Product Types</string>
    <string name="products">Products</string>
    <string name="addtype">addType</string>
    <string name="add_new_trash_type">add new trash type</string>
    <string name="add_new_trash_product">add new trash product</string>
    <string name="trash_types">trash types</string>
    <string name="update_item">update item</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_between_seen_and_all_messages">Switch between seen and all messages</string>
    <string name="add_here_new_type_for_sorting_products">add here new type for sorting products \n ( NO EMPTY FIELDS )</string>
    <string name="something_about_this_trash_type">Something about this trash type ....</string>
    <string name="trash_type_name">trash type name</string>
    <string name="save">SAVE</string>
    <string name="click_on_type_to_filter_product_list">click on type to filter product list</string>
    <string name="are_you_sure_you_want_to_delete_this_trash_type">Are you sure you want to delete this trash type?</string>
    <string name="delete">DELETE</string>
    <string name="add_new_product">add new product</string>
    <string name="add_new_product_in_db_n_no_empty_fields">Add new product in db, \n no empty fields!</string>
    <string name="product">product</string>
    <string name="product_name">Product Name</string>
    <string name="some_details_about_this_product">some details about this product</string>
    <string name="barcode">barcode</string>
    <string name="get_image">get image</string>
    <string name="productimg">productImg</string>
    <string name="Edit_container">Edit container</string>
    <string name="are_you_sure_you_want_to_delete_this_product">Are you sure you want to delete this product?</string>
    <string-array name="marker_colors_array">
        <item>Orange</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>
    <string name="my_map_api_key">AIzaSyB6F4fcWxFsWp4K-N3PP0Qvoy0Df86mQ-U</string>
    <string name="all_containers_inactive_active_containers">All containers (+deactivated) /Active containers</string>
    <string name="inactive_active">Inactive/Active</string>
    <string name="containertype">containerType</string>
    <string name="send">send</string>
    <string name="cancel">cancel</string>
    <string name="insert_data_of_the_product_you_can_not_find_scanning_and_send_to_our_support_center">Insert data of the product you can not find scanning and send to our support Center \n (No empty fields)</string>
    <string name="send_request">send request</string>
    <string name="my_requests">MY REQUESTS</string>
    <string name="choose_a_location_on_the_dropdown_where_you_want_to_throw_your_trash_data_is_used_for_the_statistics">Choose a location on the dropdown where you want to throw your trash. ( Data is used for the statistics)</string>
    <string name="my_statistics">My statistics</string>
    <string name="confirm">confirm</string>
    <string name="my_daily_statistics">my daily statistics</string>
    <string name="total_trash_thrown_today">total trash thrown today</string>
</resources>