<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundprofile"
    tools:context=".Activities.UserActivities.UserProfileMainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePass"
        android:layout_width="215dp"
        android:layout_height="52dp"
        android:layout_marginBottom="72dp"
        android:background="#3C8B5F"
        android:fontFamily="@font/viga"
        android:shadowColor="#004D40"
        android:text="@string/change_passwords"
        android:textColor="#FFFAFBC6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="#006064" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="408dp"
        android:layout_height="74dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/amaranth_bold"
        android:paddingTop="15dp"
        android:text="@string/clik_on_field_to_change_data_than_click_save_or_to_abort_just_go_back_to_main_user_panel"
        android:textAlignment="center"
        android:textColor="#2A786B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="213dp"
        android:layout_height="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/my_profile_data"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="#277742"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="142dp"
        android:layout_height="136dp"
        android:contentDescription="@string/profilepicture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/firstNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:fontFamily="@font/amaranth_bold"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#2F8E7E"
        android:textColorHint="#2F8E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilePic"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.134"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:fontFamily="@font/amaranth_bold"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#2F8E7E"
        android:textColorHint="#2F8E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilePic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEdit"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:fontFamily="@font/amaranth_bold"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#2F8E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilePic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEdit"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/passChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/amaranth_bold"
        android:hint="@string/new_password"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:minHeight="48dp"
        android:textColorHint="#2F8E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateBtn"
        app:layout_constraintVertical_bias="0.329"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/passChange2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/amaranth_bold"
        android:hint="@string/repeat_new_password"
        android:importantForAutofill="no"
        android:inputType="text|textPassword"
        android:minHeight="48dp"
        android:textColorHint="#2F8E7E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passChange"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateBtn"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="332dp"
        android:background="#3C8B5F"
        android:fontFamily="@font/viga"
        android:shadowColor="#004D40"
        android:text="@string/save_changes"
        android:textColor="#FFFAFBC6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit"
        app:layout_constraintVertical_bias="0.111"
        app:rippleColor="#006064" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="395dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/change_passwords_and_repeat_to_confirm"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#2F8E7E"
        android:textColorHint="#2F8E7E"
        android:textColorLink="#2F8E7E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/MsgTxtView"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/amaranth_bold"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textColor="#A86932"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>