<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    tools:context=".Activities.AdminActivities.AllUsersActivity">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="216dp"
        android:layout_height="46dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="@font/amaranth_bold"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="5dp"
        android:text="@string/contact_support"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="#9A3E9C91"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/myRequestsBtn"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:background="#3C8B5F"
        android:fontFamily="@font/viga"
        android:text="@string/my_requests"
        android:textColor="#FFFAFBC6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendRequestBtn"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:background="#3C8B5F"
        android:fontFamily="@font/viga"
        android:text="@string/send_request"
        android:textColor="#FFFAFBC6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/myRequestsBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A1004D29"
        android:clickable="true"
        android:contentDescription="@string/backbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/backText2"
        android:layout_width="95dp"
        android:layout_height="27dp"
        android:fontFamily="@font/viga"
        android:text="@string/go_back"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#B3307843"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/requestsRecyclerView"
        android:layout_width="411dp"
        android:layout_height="470dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRequestsBtn"
        app:layout_constraintVertical_bias="0.036" />

</androidx.constraintlayout.widget.ConstraintLayout>